﻿Version [Version Number] ([Friendly Version Number]) [Release Date]


Version 3.0.0 (v3.0 RTM)

	Improvements/Changes:
		-[Core] Container now implements IDisposable (fixes #5).

	Breaking Changes:
		-[Core] IConstructorVerificationBehavior merged with IConstructorVerificationBehavior  (fixes #2).
		-[Core] Constructor overload 'Container(ContainerOptions)' removed from Container (fixes #40).


Version 2.8.1 (v2.8.1 RTM) 2015-05-05

	Improvements/Changes:
		-[WebApi] New overloaded constructor added to the SimpleInjectorWebApiDependencyResolver to allow
		 falling back on the old scoping behavior, a change that is described in work item 21015 (work item 35).


Version 2.8 (v2.8.0 RTM) 2015-05-02

	New Features:
		-[Core] Container.IsVerifying property added to allow checking if the container is currently verifying
		 its configuration (work item 21014).
		-[Core] Nested types in exception messages are now displayed with a dot instead of a + sign, as C#
		 developers are used to. (work item 21011).
		-[Core/Diagnostics] Diagnostic warnings can now be suppressed per individual registration, by calling
		 Registration.SuppressDiagnosticWarning() (work item 21016).
		-[Core/Diagnostics] 'Ambiguous Lifestyles' diagnostic warning added (work item 20997).
		-[Core/Diagnostics] An overload to Verify() has been added that allows supplying a VerificationOption
		 that allows forcing throwing an exception in case of a diagnostic warning (related to work item 20999).
		-[Core] Options.RegisterResolveInterceptor added to allow intercepting the creation of directly 
		 resolved types (work item 33).

	Bug fixes:
		-[Core/Diagnostics] DisposableTransientComponentDiagnosticResult.Registration was always null.
		-[Core] Disallowed accidental mixed registrations of collections using different RegisterXXX overloads
		 (work item 21004).
		-[Core/Diagnostics] Torn lifestyle warning was incorrectly reported in case of decorator (work item 24).