@@ -1,7 +1,7 @@
 ﻿#region Copyright Simple Injector Contributors
 /* The Simple Injector is an easy-to-use Inversion of Control library for .NET
  * 
- * Copyright (c) 2013-2014 Simple Injector Contributors
+ * Copyright (c) 2013-2015 Simple Injector Contributors
  * 
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and 
  * associated documentation files (the "Software"), to deal in the Software without restriction, including 
@@ -60,21 +60,6 @@ namespace SimpleInjector.Lifestyles
             get { return this.lifestyleSelector() ? this.trueLifestyle : this.falseLifestyle; }
         }
 
-        // NOTE: Since the ScopedLifestyle.WhenScopeEnds is marked as virtual (which is unfortunate legacy), 
-        // custom scoped lifestyle implementations can override it, and we must therefore override it here to 
-        // make sure the custom WhenScopeEnds is called (not overriding it will skip the WhenScopeEnds of the 
-        // lifestyle and will forward the call directly to the Scope.
-        public override void WhenScopeEnds(Container container, Action action)
-        {
-            this.CurrentLifestyle.WhenScopeEnds(container, action);
-        }
-
-        // NOTE: This method is overridden for the same reason as WhenScopeEnds is.
-        public override void RegisterForDisposal(Container container, IDisposable disposable)
-        {
-            this.CurrentLifestyle.RegisterForDisposal(container, disposable);
-        }
-
         internal string GetHybridName()
         {
             return GetHybridName(this.trueLifestyle) + " / " + GetHybridName(this.falseLifestyle);
@@ -91,6 +76,11 @@ namespace SimpleInjector.Lifestyles
             // that is active during the compilation of the InstanceProducer's delegate right into that
             // delegate making the other lifestyle unavailable.
             return () => this.lifestyleSelector() ? trueProvider() : falseProvider();
+        }
+
+        protected override Scope GetCurrentScopeCore(Container container)
+        {
+            return this.CurrentLifestyle.GetCurrentScope(container);
         }
 
         private static string GetHybridName(Lifestyle lifestyle)
